--- a/finance_tracker/pubspec.yaml
+++ b/finance_tracker/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  riverpod: ^2.6.1
+  firebase_auth: ^5.5.1
+  firebase_core: ^3.12.1
+  cloud_firestore: ^5.6.5
+  hive: ^2.2.3
+  firebase_auth_mocks: ^0.14.1
 
 dev_dependencies:
   flutter_test:
