--- a/finance_tracker/pubspec.yaml
+++ b/finance_tracker/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   hive: ^2.2.3
   firebase_auth_mocks: ^0.14.1
   flutter_riverpod: ^2.6.1
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
